; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_state.c_pico_state_internal.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_state.c_pico_state_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@SEEK_SET = common dso_local global i32 0, align 4
@Pico = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @pico_state_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pico_state_internal(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @state_save(i8* %9)
  store i32 %10, i32* %5, align 4
  br label %24

11:                                               ; preds = %2
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @state_load(i8* %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %11
  %17 = load i8*, i8** %3, align 8
  %18 = load i32, i32* @SEEK_SET, align 4
  %19 = call i32 @areaSeek(i8* %17, i32 0, i32 %18)
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @state_load_legacy(i8* %20)
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %16, %11
  %23 = call i32 (...) @PicoLoadStateHook()
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @Pico, i32 0, i32 0, i32 0), align 4
  br label %24

24:                                               ; preds = %22, %8
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32 @state_save(i8*) #1

declare dso_local i32 @state_load(i8*) #1

declare dso_local i32 @areaSeek(i8*, i32, i32) #1

declare dso_local i32 @state_load_legacy(i8*) #1

declare dso_local i32 @PicoLoadStateHook(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
